# aws-robotics-day

./: 1_dev_hello.md  2_dog_finder.md  3_deployment.md  README.md
Docs/: 1_dev_hello.md  index.md
DogFinder/: LICENSE.txt  submit_job.sh
DogFinder/robot_ws/: .rosinstall
DogFinder/robot_ws/src/dogfinder_robot/: CMakeLists.txt  package.xml  setup.py
DogFinder/robot_ws/src/dogfinder_robot/config/: cw_logs_config.yaml  h264_encoder_config.yaml  h264_encoder_raspicam_config.yaml  kvs_config.yaml
DogFinder/robot_ws/src/dogfinder_robot/launch/: cloudwatch.launch  dogfinder_rotate.launch  find_dog.launch  turtlebot_find_dog.launch
DogFinder/robot_ws/src/dogfinder_robot/msg/: TurnCommand.msg
DogFinder/robot_ws/src/dogfinder_robot/nodes/: dog_finder  monitor_speed  rotate  turn
DogFinder/simulation_ws/src/dogfinder_simulation/: CMakeLists.txt  package.xml
DogFinder/simulation_ws/src/dogfinder_simulation/launch/: empty_world.launch  hexagon.launch  spawn_turtlebot.launch
DogFinder/simulation_ws/src/dogfinder_simulation/worlds/: empty.world
