<?xml version="1.0"?>
<package format="2">
  <name>dogfinder_simulation</name>
  <version>1.1.0</version>
  <description>
    Gazebo simulation package for the TurtleBot3 with AWS cloud service integration
  </description>
  <license>Apache 2.0</license>
  <author email="gavinaws@amazon.com">Gavin Adams</author>
  <maintainer email="gavinaws@amazon.com">Gavin Adams</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_simulations</depend>

  <!-- Support camera operations -->
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <!-- <depend>image_transport_plugins</depend> -->

  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib:${prefix}/models/turtlebot3_autorace/gazebo_traffic_plugin" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/models/turtlebot3_autorace"/>
  </export>
</package>
